--- a/macSVG/en.lproj/MacSVGDocument.xib
+++ b/macSVG/en.lproj/MacSVGDocument.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="15G17023" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
@@ -383,15 +383,15 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="754" height="582"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <customView id="WrK-Pm-w3x" userLabel="CheckeredBackgroundView" customClass="CheckeredBackgroundView">
-                                                                <rect key="frame" x="18" y="0.0" width="736" height="561"/>
+                                                            <customView misplaced="YES" id="WrK-Pm-w3x" userLabel="CheckeredBackgroundView" customClass="CheckeredBackgroundView">
+                                                                <rect key="frame" x="20" y="0.0" width="734" height="561"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <connections>
                                                                     <outlet property="toolSettingsPopoverViewController" destination="hC3-fr-n9V" id="UfJ-Sc-XE0"/>
                                                                 </connections>
                                                             </customView>
-                                                            <webView identifier="SVGWebView" focusRingType="none" maintainsBackForwardList="NO" id="100022" userLabel="SVGWebView" customClass="SVGWebView">
-                                                                <rect key="frame" x="18" y="0.0" width="736" height="561"/>
+                                                            <webView identifier="SVGWebView" focusRingType="none" misplaced="YES" maintainsBackForwardList="NO" id="100022" userLabel="SVGWebView" customClass="SVGWebView">
+                                                                <rect key="frame" x="20" y="0.0" width="734" height="561"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <webPreferences key="preferences" identifier="svgWebView" defaultFontSize="12" defaultFixedFontSize="12" plugInsEnabled="NO" javaEnabled="NO" javaScriptCanOpenWindowsAutomatically="NO"/>
                                                                 <connections>
@@ -404,13 +404,51 @@
                                                                     <outlet property="svgWebKitController" destination="100193" id="100802"/>
                                                                 </connections>
                                                             </webView>
-                                                            <customView id="100402" userLabel="Horizontal Ruler" customClass="HorizontalRulerView">
-                                                                <rect key="frame" x="18" y="562" width="736" height="18"/>
+                                                            <customView misplaced="YES" id="100402" customClass="HorizontalRulerView">
+                                                                <rect key="frame" x="20" y="561" width="734" height="20"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                                <subviews>
+                                                                    <webView misplaced="YES" id="qWn-fg-cgP">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="734" height="20"/>
+                                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                        <webPreferences key="preferences" defaultFontSize="12" defaultFixedFontSize="12" plugInsEnabled="NO" javaEnabled="NO" javaScriptEnabled="NO" javaScriptCanOpenWindowsAutomatically="NO">
+                                                                            <nil key="identifier"/>
+                                                                        </webPreferences>
+                                                                        <connections>
+                                                                            <outlet property="UIDelegate" destination="100402" id="7y4-qu-8y4"/>
+                                                                            <outlet property="downloadDelegate" destination="100402" id="8w7-8h-E8i"/>
+                                                                            <outlet property="frameLoadDelegate" destination="100402" id="hSg-Gu-4Ml"/>
+                                                                            <outlet property="policyDelegate" destination="100402" id="D0B-rx-LX1"/>
+                                                                            <outlet property="resourceLoadDelegate" destination="100402" id="nfW-pX-O8f"/>
+                                                                        </connections>
+                                                                    </webView>
+                                                                </subviews>
+                                                                <connections>
+                                                                    <outlet property="rulerWebView" destination="qWn-fg-cgP" id="mPt-iJ-Noh"/>
+                                                                </connections>
                                                             </customView>
-                                                            <customView id="100403" customClass="VerticalRulerView">
-                                                                <rect key="frame" x="0.0" y="0.0" width="18" height="561"/>
+                                                            <customView misplaced="YES" id="100403" customClass="VerticalRulerView">
+                                                                <rect key="frame" x="0.0" y="0.0" width="20" height="561"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
+                                                                <subviews>
+                                                                    <webView misplaced="YES" id="Lsg-Wc-HSx">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="561"/>
+                                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                        <webPreferences key="preferences" defaultFontSize="12" defaultFixedFontSize="12" plugInsEnabled="NO" javaEnabled="NO" javaScriptEnabled="NO" javaScriptCanOpenWindowsAutomatically="NO">
+                                                                            <nil key="identifier"/>
+                                                                        </webPreferences>
+                                                                        <connections>
+                                                                            <outlet property="UIDelegate" destination="100403" id="eOv-lU-Msu"/>
+                                                                            <outlet property="downloadDelegate" destination="100403" id="qoZ-lf-lg6"/>
+                                                                            <outlet property="frameLoadDelegate" destination="100403" id="Fd3-Bs-0jW"/>
+                                                                            <outlet property="policyDelegate" destination="100403" id="MWW-oK-hfT"/>
+                                                                            <outlet property="resourceLoadDelegate" destination="100403" id="qRw-Xy-hBM"/>
+                                                                        </connections>
+                                                                    </webView>
+                                                                </subviews>
+                                                                <connections>
+                                                                    <outlet property="rulerWebView" destination="Lsg-Wc-HSx" id="idw-h9-21a"/>
+                                                                </connections>
                                                             </customView>
                                                         </subviews>
                                                     </customView>
