The RulerView objects are now improved to match the zoom value of the <svg> element.
The remaining unimplemented task for RulerView objects is to match the scroll values, which will be add is a later commit.

--- a/macSVG/en.lproj/MacSVGDocument.xib
+++ b/macSVG/en.lproj/MacSVGDocument.xib
@@ -425,6 +425,7 @@
                                                                 </subviews>
                                                                 <connections>
                                                                     <outlet property="rulerWebView" destination="qWn-fg-cgP" id="mPt-iJ-Noh"/>
+                                                                    <outlet property="svgWebView" destination="100022" id="gn5-0v-mkc"/>
                                                                 </connections>
                                                             </customView>
                                                             <customView misplaced="YES" id="100403" customClass="VerticalRulerView">
@@ -448,6 +449,7 @@
                                                                 </subviews>
                                                                 <connections>
                                                                     <outlet property="rulerWebView" destination="Lsg-Wc-HSx" id="idw-h9-21a"/>
+                                                                    <outlet property="svgWebView" destination="100022" id="IJv-2V-mr0"/>
                                                                 </connections>
                                                             </customView>
                                                         </subviews>
