--- a/MacSVG Plugin Projects/macSVG Plugins/ElementInfoEditor/ElementInfoEditor/ElementInfoEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/ElementInfoEditor/ElementInfoEditor/ElementInfoEditor.xib
@@ -8,27 +8,46 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ElementInfoEditor">
             <connections>
-                <outlet property="elementInfoTextField" destination="ZcY-YZ-62g" id="PCA-Je-yfK"/>
-                <outlet property="pluginView" destination="ZcY-YZ-62g" id="EU7-Wy-jgv"/>
+                <outlet property="elementInfoTextScrollView" destination="6WE-BH-b0Y" id="6B4-nL-M8g"/>
+                <outlet property="elementInfoTextView" destination="WX3-zF-jlB" id="l9m-aK-d4n"/>
+                <outlet property="pluginView" destination="uyP-H5-S4w" id="gA8-84-h9R"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" id="uyP-H5-S4w">
+        <customView misplaced="YES" id="uyP-H5-S4w" customClass="FlippedView">
             <rect key="frame" x="0.0" y="0.0" width="270" height="346"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" id="ZcY-YZ-62g">
+                <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" id="6WE-BH-b0Y">
                     <rect key="frame" x="0.0" y="0.0" width="270" height="346"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" allowsEditingTextAttributes="YES" id="J8i-52-JDi">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
+                    <clipView key="contentView" copiesOnScroll="NO" id="i00-Hh-tIg">
+                        <rect key="frame" x="1" y="1" width="268" height="344"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView editable="NO" importsGraphics="NO" findStyle="panel" incrementalSearchingEnabled="YES" continuousSpellChecking="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="WX3-zF-jlB">
+                                <rect key="frame" x="0.0" y="0.0" width="268" height="344"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <size key="minSize" width="268" height="344"/>
+                                <size key="maxSize" width="463" height="10000000"/>
+                                <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </clipView>
+                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="Kzi-Z9-Sok">
+                        <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </scroller>
+                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="6uJ-0N-MUi">
+                        <rect key="frame" x="-100" y="-100" width="15" height="344"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </scroller>
+                </scrollView>
             </subviews>
-            <point key="canvasLocation" x="61.5" y="123.5"/>
+            <point key="canvasLocation" x="61" y="123"/>
         </customView>
     </objects>
 </document>
